--- a/blog_posts/experiments/experiment1/dots.html
+++ b/blog_posts/experiments/experiment1/dots.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ant pattern in 3D using dots</title>
+    <title>Random Pattern in 2D using dots</title>
     <style>
       canvas {
         background-color: transparent;
@@ -14,7 +14,6 @@
         font-size: 16px;
         color: #fff;
         background-color: #333;
-        back
         border: none;
         border-radius: 5px;
         padding: 10px 20px;
