--- a/blog_posts/experiments/experiment1/dots.html
+++ b/blog_posts/experiments/experiment1/dots.html
@@ -3,29 +3,86 @@
   <head>
     <title>Random Pattern in 2D using dots</title>
     <style>
-      canvas {
-        background-color: transparent;
-        border: 5px solid #000;
-        border-radius: 10px;
-        box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
       }
 
-      button {
+      #controller {
+        display: inline;
+        justify-content: center;
+        align-items: center;
+        background-color: #f0f0f0;
+        border-radius: 10px;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+        padding: 20px;
+        margin-top: 20px;
+      }
+
+      #button-container {
+        display: flex;
+      }
+
+      #button-container button {
+        flex: 1;
+        margin: 0 200px;
         font-size: 16px;
         color: #fff;
         background-color: #333;
         border: none;
         border-radius: 5px;
         padding: 10px 20px;
-        margin: 0 10px;
         cursor: pointer;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+      }
+
+      #button-container button:first-child {
+        margin-left: 0;
+      }
+
+      #button-container button:last-child {
+        margin-right: 0;
+      }
+
+      #dots-container {
+        display: flex;
+        align-items: center;
+        margin-left: 20px;
+      }
+
+      #dots-container span:first-child {
+        font-size: 24px;
+        color: rebeccapurple;
+        margin-right: 5px;
+      }
+
+      #dots-container span:last-child {
+        color: rebeccapurple;
+        font-size: 24px;
+      }
+
+      #canvas {
+        background-color: transparent;
+        border: 5px solid #000;
+        border-radius: 10px;
+        box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
       }
     </style>
   </head>
   <body>
+    <div id="controller">
+      <div id="button-container">
+        <button id="add">Add Dot</button>
+        <button id="remove">Remove Dot</button>
+        <button id="toggle">Pause</button>
+      </div>
+      <div id="dots-container">
+        <span>Number of Dots:</span>
+        <span id="num-dots">10</span>
+      </div>
+    </div>
     <canvas id="canvas"></canvas>
-    <button id="toggle">Pause</button>
     <script>
       const canvas = document.getElementById('canvas');
       const ctx = canvas.getContext('2d');
@@ -36,7 +93,11 @@
 
       // Set up the ant parameters
       let dots = [];
-      for (let i = 0; i < 50; i++) {
+      let numDots = 10;
+      
+      const colors = ['#ff0000', '#00ff00', '#0000ff', '#ffff00', '#ff00ff', '#00ffff'];
+
+      for (let i = 0; i < numDots; i++) {
         let x = Math.random() * (canvas.width - 20) + 10;
         let y = Math.random() * (canvas.height - 20) + 10;
         let z = Math.random() * 20 - 10;
@@ -44,7 +105,7 @@
         let vy = Math.random() * 10 - 5;
         let vz = Math.random() * 10 - 5;
         let radius = 3;
-        let color = '#000';
+        let color = colors[Math.floor(Math.random() * colors.length)];
         dots.push({ x, y, z, vx, vy, vz, radius, color });
       }
 
@@ -58,8 +119,8 @@
           ctx.fill();
           ctx.closePath();
 
-          // Update the position
-          dot.x += dot.vx;
+                   // Update the position
+                   dot.x += dot.vx;
           dot.y += dot.vy;
           dot.z += dot.vz;
 
@@ -99,6 +160,30 @@
           toggleButton.textContent = 'Pause';
         }
         isRunning = !isRunning;
+      });
+
+      const addButton = document.getElementById('add');
+      addButton.addEventListener('click', function() {
+        numDots++;
+        let x = Math.random() * (canvas.width - 20) + 10;
+        let y = Math.random() * (canvas.height - 20) + 10;
+        let z = Math.random() * 20 - 10;
+        let vx = Math.random() * 10 - 5;
+        let vy = Math.random() * 10 - 5;
+        let vz = Math.random() * 10 - 5;
+        let radius = 3;
+        let color = '#000';
+        dots.push({ x, y, z, vx, vy, vz, radius, color });
+        document.getElementById('num-dots').textContent = numDots;
+      });
+
+      const removeButton = document.getElementById('remove');
+      removeButton.addEventListener('click', function() {
+        if (numDots > 0) {
+          numDots--;
+          dots.pop();
+          document.getElementById('num-dots').textContent = numDots;
+        }
       });
     </script>
   </body>
