--- a/blog_posts/experiments/experiment1/dots.html
+++ b/blog_posts/experiments/experiment1/dots.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Interactive Dot Pattern with Trails and Collisions</title>
+    {% include gtm-head.html %}
     <style>
       body {
         margin: 0;
@@ -121,6 +122,7 @@
     </style>
   </head>
   <body>
+    {% include gtm-body.html %}
     <div id="controller">
       <div id="button-container">
         <button id="add">Add Dot</button>
