--- a/blog_posts/experiments/hnsw-simul/index.html
+++ b/blog_posts/experiments/hnsw-simul/index.html
@@ -1,12 +1,17 @@
+---
+layout: null
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% include gtm-head.html %}
     <title>HNSW Algorithm Visualization</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    {% include gtm-body.html %}
     <div class="container">
         <h1>HNSW Algorithm Simulation</h1>
         <div class="description">
