--- a/blog_posts/experiments/pixelate/index.html
+++ b/blog_posts/experiments/pixelate/index.html
@@ -6,10 +6,12 @@ layout: null
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% include gtm-head.html %}
     <title>Image Pixelator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    {% include gtm-body.html %}
     <div class="container">
         <h1>Image Pixelator</h1>
         
