--- a/blog_posts/experiments/pixelate/index.html
+++ b/blog_posts/experiments/pixelate/index.html
@@ -39,7 +39,7 @@ layout: null
         <div class="image-container">
             <div class="image-box">
                 <h3>Original Image</h3>
-                <img id="originalImage" src="placeholder.png" alt="Original Image">
+                <img id="originalImage" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='200' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23f0f0f0'/%3E%3Ctext x='50%25' y='50%25' font-family='Arial' font-size='16' text-anchor='middle' dominant-baseline='middle' fill='%23888888'%3ESelect an image%3C/text%3E%3C/svg%3E" alt="Original Image">
             </div>
             
             <div class="image-box">
